--- a/sp12-config/src/main/resources/application.yml
+++ b/sp12-config/src/main/resources/application.yml
@@ -1,15 +1,28 @@
 spring:
   application:
     name: config-server
+  profiles:
+    active: native
   
   cloud:
     config:
       server:
-        git:
-          uri: https://github.com/MyzwzyzK/sp_repo/tree/master/sp-config
-          searchPaths: config
-          username: MrzwzyzK
-          password: YzZ28109785
+        native:
+          search-locations: classpath:/config
+          
+  rabbitmq:
+    host: 192.168.64.140
+    port: 5672
+    username: admin
+    password: admin
+#  cloud:
+#    config:
+#      server:
+#        git:
+#          uri: https://github.com/MyzwzyzK/sp_repo/tree/master/sp-config
+#          searchPaths: config
+#          username: MrzwzyzK
+#          password: YzZ28109785
     
 server:
   port: 6001
